# gphotos-to-s3-gracier

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pyproject.toml  Brewfile  Brewfile.lock.json  Makefile  README.md  cspell.json  pyproject.toml  requirements-dev.txt  setup.sh
.github/actions/setup-python/: action.yml
.github/workflows/: pre-commit.yml
